fix(env): add temp amb library path to platformio

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,7 @@
 platform = atmelavr
 board = uno
 framework = arduino
+lib_extra_dirs =
+    /home/enzo/.arduino15/packages/realtek/hardware/AmebaPro2/4.0.8-build20241025/libraries/
+    /home/enzo/.arduino15/packages/realtek/hardware/AmebaPro2/4.0.8-build20241025/cores/ambpro2/
+    /home/enzo/.arduino15/packages/realtek/hardware/AmebaPro2/4.0.8-build20241025/system/component/fatfs/
